crates/keron-lang/tests/corpus/errors/check/reconcile_block_bad_step.keron
from "std:fs" use symlink, Symlink

val a: Symlink = symlink(from = "from-a", to = "to-a")
val n: Int = 1
reconcile {
  a;
  n;
  a -> n
}
